--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   shared_preferences: ^2.3.2
   sqflite: ^2.3.3+1
   path: ^1.9.0
+  sqflite_common_ffi: ^2.3.3
 
 dev_dependencies:
   flutter_test:
