--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.8              # Cupertino Assets for IOS Design
+  fl_chart: ^0.36.0                    # Flutter Chart Library for Graphs
+  flutter_riverpod: ^0.14.0+3          # Flutter State Management Library
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
